--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="section__text">
         <p class="section__text__p1">Olá, Eu sou</p>
         <h1 class="title">Gustavo Muzeka</h1>
-        <p class="section__text__p2">FullStack Developer</p>
+        <p class="section__text__p2">T.I / Soluctions Architec</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Experiência</h3>
-              <p>4 anos<br/>Suporte/Líder TI</p>
+              <p>6 anos<br/>Suporte/Líder TI</p>
             </div>
             <div class="details-container">
               <img
@@ -132,128 +132,8 @@
       <p class="section__text__p1">Explore Minha</p>
       <h1 class="title">Experiência</h1>
       <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML5/CSS3</h3>
-                  <p>Avançado</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Javascript</h3>
-                  <p>Intermediário</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS/SCSS</h3>
-                  <p>Intermediário</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JQuery</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Bootstrap</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>WordPress</h3>
-                  <p>Avançado</p>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Backend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>MySQL</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Python</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Cursando</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-            </div>
-          </div>
-        </div>
+        <span>Tenho experiência em <b>front-end</b> com foco em <b>JavaScript</b> (além de HTML e CSS) e frameworks como <b>Bootstrap</b>, <b>jQuery</b> e <b>TypeScript</b>. <br>Na parte de back-end, tenho conhecimentos em banco de dados e nas linguagens de programação <b>Python</b> e JavaScript. <br>Tenho bastante conhecimento em <b>Active Directory</b> e estou tirando minhas certificações da Amazon (Practitioner). <br>Também tenho experiência em gestão de contratos internos, monitoramento de rede, manutenção de hardware e software, configuração e monitoramento da telefonia IP. Já realizei alguns trabalhos como gestor de tráfego (especialmente Meta ADS e Google ADS).<br> Atualmente, estou me preparando para me tornar um Solutions Architect.</span>
+        <span>Trabalho tanto com Linux quanto com Windows.</span>
       </div>
       <img
         src="./assets/arrow.png"
