--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/GUSTAVOMUZEKA-2023.pdf')"
+            onclick="window.open('https://drive.google.com/file/d/16BAfP_kZrAH6ie6llCqmCV3zYB-NUW-Z/view?usp=drive_link')"
           >
             Download CV
           </button>
